# caft-vgg16-tensorrt-finetune

./: CMakeLists.txt  README.MD  cached_fine_tune_model.cpp  cached_fine_tune_model.h  export_onnx_feature_extractor.py  tensorrt_infer.cpp  tensorrt_infer.h
